--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -10,8 +10,7 @@
   background: linear-gradient(to right top, rgba(0, 0, 0, 0.5), rgba(8, 6, 6, 0.5), rgba(8, 6, 6, 0.5)), url('../img/img-background1.jpg'); 
   background-position: top center;
   background-size: cover;
-  // background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 .dashboard1 {
   margin: 0;
