--- a/src/Header/Header.scss
+++ b/src/Header/Header.scss
@@ -5,6 +5,7 @@
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 .home {
   background: linear-gradient(to right top, rgba(0, 0, 0, 0.5), rgba(8, 6, 6, 0.5), rgba(8, 6, 6, 0.5)), url('../img/srm.jpg'); 
